--- a/RailwayTicketHub/app/src/main/AndroidManifest.xml
+++ b/RailwayTicketHub/app/src/main/AndroidManifest.xml
@@ -12,20 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity"> </activity>
         <activity android:name=".SplashScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <service
             android:name=".AppKillListner"
             android:stopWithTask="false" />
 
-        <activity android:name=".QRScreen">   <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
+        <activity android:name=".QRScreen">  </activity>
     </application>
 
 </manifest>
