--- a/RailwayTicketEmployee/app/src/main/AndroidManifest.xml
+++ b/RailwayTicketEmployee/app/src/main/AndroidManifest.xml
@@ -9,18 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".ForgotPassword" />
-        <activity android:name=".login" />
+        <activity android:name=".login"></activity>
         <activity android:name=".register" />
         <activity android:name=".SecondaryScreenLogin">
+
+        </activity>
+        <activity android:name=".FeedBack" />
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FeedBack"></activity>
     </application>
 
 </manifest>
