Added New Acitivity For QR as it required Acitivty Class Extension so used for acticity result ..

--- a/RailwayTicket/app/src/main/AndroidManifest.xml
+++ b/RailwayTicket/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
             android:name=".ForgotPassword"
             android:label="@string/title_activity_forgot_password"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity android:name=".QRScanner"/>
+
         <activity
             android:name=".CaptureActivityPortrait"
             android:screenOrientation="portrait"
